--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "antd": "^4.21.0",
     "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-csv": "^2.2.2",
     "react-dnd": "^16.0.1",
@@ -18,6 +21,7 @@
     "react-dom": "^18.1.0",
     "react-drag-sortable": "^1.0.6",
     "react-dropzone": "^14.2.2",
+    "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.18.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
@@ -30,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d main build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
