--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://davidrealcali.github.io/bpa-front",
   "name": "front-bpa",
   "version": "0.1.0",
   "private": true,
@@ -33,8 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy":"react-scripts build && aws s3 sync build/ s3://bpa-project --acl public-read"
   },
   "eslintConfig": {
     "extends": [
